<resources>
    <string name="app_name">MVVM</string>

    <string name="dialog_permission_title">Permission</string>
    <string name="dialog_permission_granted_message">Location permission already granted, thanks!</string>
    <string name="dialog_permission_granted_button_ok">OK</string>
    <string name="dialog_permission_denied_message">Give location permission in settings</string>
    <string name="dialog_permission_denied_button_ok">Open settings</string>
    <string name="dialog_permission_denied_button_cancel">Cancel</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_news">News</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_remove_news">menu_remove_news</string>
    <string name="menu_add_favorite">menu_save_news</string>

    <string name="button_go_back">Go back</string>
    <string name="button_green_box">Green box</string>
    <string name="button_yellow_box">Yellow box</string>
    <string name="button_send_message">Send message</string>
    <string name="button_request_permission">Request Permission</string>
    <string name="button_close_secret">Close secret</string>
    <string name="button_close_whole_box">Close this whole box</string>
    <string name="button_open_secret">Open Secret</string>
    <string name="button_generate_number">Generate number</string>

    <string name="please_wait">Please wait…</string>
    <string name="edit_profile_description">Right now you can edit only username</string>
    <string name="profile_title_hint">Let\'s imagine this is a user profile screen</string>
    <string name="field_username">Username</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_create_account">Create Account</string>
    <string name="field_repeat_password">Repeat Password</string>
    <string name="field_email">Email</string>
    <string name="field_created_at">Created at</string>
    <string name="field_password">Password</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="sign_up_success">Wow, you have created a new account. Now you can login with it.</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="placeholder">-</string>

    <string name="toolbar_title_news">News</string>
    <string name="toolbar_title_favorite_news">Favorite news</string>

    <string name="secret_title">This is a secret place</string>
    <string name="message_title">Message</string>
    <string name="title_result">Result</string>

    <string name="hint_result">Result</string>
    <string name="hint_message">Message</string>
</resources>