<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.semdelion.presentation.ui.tabs.profile.ProfileViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".views.tabs.profile.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/screenTitleTextView"
                style="@style/TitleTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/dataContainer"
                app:layout_constraintVertical_chainStyle="packed"
                android:text="@string/profile_title_hint"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dataContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/screenTitleTextView"
                app:layout_constraintBottom_toTopOf="@id/editProfileButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/emailHintTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:text="@string/field_email"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/usernameHintTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:text="@string/field_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintTop_toBottomOf="@id/emailHintTextView"/>

                <TextView
                    android:id="@+id/createdAtHintTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:text="@string/field_created_at"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintTop_toBottomOf="@id/usernameHintTextView"/>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/startBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="emailHintTextView,usernameHintTextView,createdAtHintTextView"/>

                <TextView
                    android:id="@+id/emailTextView"
                    style="@style/ProfileValueTextView"
                    tools:text="test@test.test"
                    app:layout_constraintStart_toStartOf="@id/startBarrier"
                    app:layout_constraintTop_toTopOf="@id/emailHintTextView"/>

                <TextView
                    android:id="@+id/usernameTextView"
                    style="@style/ProfileValueTextView"
                    tools:text="admin"
                    app:layout_constraintStart_toStartOf="@id/startBarrier"
                    app:layout_constraintTop_toTopOf="@id/usernameHintTextView"/>

                <TextView
                    android:id="@+id/createdAtTextView"
                    style="@style/ProfileValueTextView"
                    tools:text="10/10/2010"
                    app:layout_constraintStart_toStartOf="@id/startBarrier"
                    app:layout_constraintTop_toTopOf="@id/createdAtHintTextView"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/editProfileButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dataContainer"
                app:layout_constraintBottom_toTopOf="@id/logoutButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/action_edit_profile"/>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editProfileButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/action_logout"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>